--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,15 @@
     <title>Chess Memory</title>
   </head>
   <body>
+    <header>
+      <h1>Chess Memory</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="tutorial.html">Tutorial</a></li>
+        </ul>
+      </nav>
+    </header>
     
     {{content}}
   
