--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
       <h1>Chess Memory</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="tutorial.html">Tutorial</a></li>
+          <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+          <li><a href="{{site.baseurl}}/tutorial.html">Tutorial</a></li>
         </ul>
       </nav>
     </header>
