--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Chess Memory</title>
+    <link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Chess Memory</h1>
-      <nav>
-        <ul>
-          <li><a href="{{site.baseurl}}/index.html">Home</a></li>
-          <li><a href="{{site.baseurl}}/tutorial.html">Tutorial</a></li>
-        </ul>
-      </nav>
+      {% include nav.html %}
     </header>
     
     {{content}}
