add some nav bar css.  nav bar include now accepts include variable, which is used to put a different class on the header nav bar and the footer nav bar.

--- a/css/common.css
+++ b/css/common.css
@@ -9,3 +9,17 @@ html {
   background-color: #000531;
   color: #FFFFFF;
 }
+
+.nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav > li {
+  display: inline-block;
+}
+
+.nav-top {
+  font-size: 1.25rem;
+}
