--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <ul>
+  <ul class='nav {{include.navclass}}'>
     <li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
     <li><a href="{{site.baseurl}}/tutorial.html" class="{% if page.url == '/tutorial.html' %}current{% endif %}">Tutorial</a></li>
   </ul>
