--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,13 @@
   <body>
     <header>
       <h1>Chess Memory</h1>
-      {% include nav.html %}
+      {% include nav.html navclass="nav-top" %}
     </header>
     
     {{content}}
   
+    <footer>
+      {% include nav.html navclass="nav-bottom" %}
+    </footer>
   </body>
 </html>
