added two more tabs, dev and products, which loop over posts in their particular category.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,7 @@
   <ul class='nav {{include.navclass}}'>
     <li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
     <li><a href="{{site.baseurl}}/tutorial.html" class="{% if page.url == '/tutorial.html' %}current{% endif %}">Tutorial</a></li>
+    <li><a href="{{site.baseurl}}/dev.html" class="{% if page.url == '/dev.html' %}current{% endif %}">Dev</a></li>
+    <li><a href="{{site.baseurl}}/products.html" class="{% if page.url == '/products.html' %}current{% endif %}">Products</a></li>
   </ul>
 </nav>
